BuildHughes/translation-tool/inputs/source_meta/objects/Time_Zones__c.object
<CustomObject>
    <description>This is the Time Zone Objects</description>
    <fields>
        <fullName>Area_Code__c</fullName>
        <description>Area Code</description>
        <label>Area Code</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City</description>
        <label>City</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County_FIPS__c</fullName>
        <description>County FIPS</description>
        <label>County FIPS</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County</description>
        <label>County</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST_Number__c</fullName>
        <description>DST Number</description>
        <label>DST Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DST__c</fullName>
        <description>DST</description>
        <label>DST</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HNSProductName__c</fullName>
        <label>HNSProduct Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>On_premise_Staging_DB_ID__c</fullName>
        <externalId>true</externalId>
        <label>On-premise Staging DB ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <description>Preferred</description>
        <label>Preferred</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>State/Province</description>
        <label>State/Province</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Offset__c</fullName>
        <description>Time Zone Offset</description>
        <label>Time Zone Offset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <description>Time Zone</description>
        <label>Time Zone</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <description>Zip/Postal Code</description>
        <label>Zip/Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Time Zones</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TZONE-{0000000000}</displayFormat>
        <label>Time Zones Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>